# resolv-mir

./: .gitignore  README.md  pyproject.toml
src/resolv_mir/: __init__.py
src/resolv_mir/note_sequence/: __init__.py  constants.py  exceptions.py  statistics.py  utilities.py
src/resolv_mir/note_sequence/attributes/: __init__.py  common.py  dynamics.py  pitch.py  rhythmic.py
src/resolv_mir/note_sequence/chord_symbols/: __init__.py  common.py  constants.py  exceptions.py  parser.py  splitter.py  transposer.py
src/resolv_mir/note_sequence/io/: __init__.py  midi_io.py  musicxml_io.py  utilities.py
src/resolv_mir/note_sequence/metrics/: __init__.py  common.py  dynamics.py  pitch.py  rhythmic.py
src/resolv_mir/note_sequence/processors/: __init__.py  extender.py  extractor.py  quantizer.py  slicer.py  splitter.py  stretcher.py  sustainer.py  transposer.py  truncator.py
src/resolv_mir/note_sequence/representations/: __init__.py  sequence.py
src/resolv_mir/protobuf/: __init__.py
src/resolv_mir/protobuf/protos/: compile_proto.sh  install_protoc.sh  symbolic_music.proto  symbolic_music_pb2.py  symbolic_music_pb2.pyi
tests/data/: 4bar_monophonic_melody.mid  4bar_monophonic_melody_quantized.midi
tests/data/processors/transposer/: negative_4bar_monophonic_melody.mid  oob_delete_4bar_monophonic_melody.mid  oob_keep_4bar_monophonic_melody.mid  positive_4bar_monophonic_melody.mid
tests/note_sequence/processors/: slicer_test.py  transposer_test.py
tests/note_sequence/representations/: sequence_test.py
