[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "resolv-mir"
version = "0.0.0.dev1"
description = "A package for Resolv containing utilities for MIR (Music Information Retrival)."
license = "Apache-2.0"
authors = [
    "Matteo Pettenò <matteo.petteno1@gmail.com>"
]
maintainers = [
    "Matteo Pettenò <matteo.petteno1@gmail.com>"
]
readme = ["README.md", "src/README.md", "docs/README.md"]
homepage = "https://github.com/resolv-libs/resolv-mir"
documentation = "https://github.com/resolv-libs/resolv-mir/docs"
repository = "https://github.com/resolv-libs/resolv-mir"
keywords = [
    "resolv", "rersolv-libs", "resolv-mir",
    "mir", "symbolic-music",
    "note-seq", "magenta"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent"
]
packages = [
    { include = "resolv_mir", from = "src" },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
pretty_midi = ">=0.2.10"
protobuf = "^5.26.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]

[tool.poetry.group.docs.dependencies]

[tool.poetry.extras]

[tool.poetry.plugins]

[tool.poetry.urls]
